@@ -1,5 +1,11 @@
 2009-01-16  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Xml/Serialization/MapSerializer.cs: fix utf-8 output
+
+	* Data/KeyholeMarkupLanguage.cs: output utf-8
+
+2009-01-16  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Xml/Serialization/MapSerializer.cs: fix locale issues
 
 2009-01-15  Scott Ellington  <scott.ellington@gmail.com>
